[package]
name = "aalias"
version = "0.1.1"
authors = ["Federico Vitale <fedevitale99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-storage = "0.0.2"
clap = "3.0.0-beta.2"
dirs = "3.0"
regex = "1.5"
colored = "2"
