[package]
name = "aalias"
version = "0.1.3"
authors = ["Federico Vitale <mail@fedevitale.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-storage = "0.0.2"
clap = "3.0.0-beta.2"
dirs = "3.0"
termimad = "0.20.1"
regex = "1.5"
colored = "2"
